# copilot-minimax

./: .gitignore  README.md  copilot_minimax.py  mock_connector_server.py  plan.md  plugin.json  pyproject.toml
.github/agents/: minimax.agent.md
.github/hooks/: minimax-lifecycle.json
.github/hooks/scripts/: post-tool-use.mjs  pre-tool-use.mjs  session-start.mjs  stop.mjs
.github/instructions/: minimax-coding.instructions.md
.github/prompts/: create-skill.prompt.md  debug.prompt.md  deploy.prompt.md  review.prompt.md
.github/skills/memory-management/: SKILL.md
.github/skills/service-orchestration/: SKILL.md
.github/skills/session-continuity/: SKILL.md
.github/skills/skill-creation/: SKILL.md
connectors/contracts/: gmail.tools.v1.json
copilot_minimax_core/: __init__.py  cli.py  commands.py  constants.py  custom_patches.py  inspector.py  model_catalog.py  patching.py  paths.py  settings_ops.py
docs/: connector-bridge.md  roadmap.md  ui-ux-vision.md  ui-wireframes.md
examples/: custom_patch.example.json
extension/: LICENSE.md  SETUP.md  copilot-gmail-connector-0.1.0.vsix  package-lock.json  package.json  tsconfig.json  vitest.config.js  vitest.config.js.map
extension/src/: extension.ts
extension/src/auth/: googleAuthProvider.ts
extension/src/chat/: gmailParticipant.ts
extension/src/github/: githubClient.test.ts  githubClient.ts
mcp-servers/google/: package-lock.json  package.json
mcp-servers/sessions/: package-lock.json  package.json
mcp-servers/telegram/: package-lock.json  package.json
mcp-servers/whatsapp/: package-lock.json  package.json
patches/: connector.bridge.v1.json  connector.bridge.v2.json  gmail.connector.template.json
tools/: _fix_token.py  gmail_reader.py  mock_connector_server.py
(+23 files in other folders)
