[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "copilot-minimax"
version = "0.1.0"
description = "Patch VS Code Copilot Chat to use MiniMax API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "akashmahlaz" }]

[project.scripts]
copilot-minimax = "copilot_minimax_core.cli:main"
