[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-minimax"
version = "0.1.0"
description = "Patch VS Code Copilot Chat to use MiniMax API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "akashmahlaz" }]
keywords = ["copilot", "vscode", "minimax", "anthropic", "cli"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/akashmahlaz/copilot-minimax"
Repository = "https://github.com/akashmahlaz/copilot-minimax"
Issues = "https://github.com/akashmahlaz/copilot-minimax/issues"

[project.scripts]
copilot-minimax = "copilot_minimax_core.cli:main"

[tool.setuptools.packages.find]
include = ["copilot_minimax_core*"]
